--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Our menu</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="menu">
+        <p>Our Menu</p>
+    </div>
+    <div class="container">
+        <div class="chicken box">
+            <div class="title">
+                <p>Chicken</p>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt dolore mollitia inventore veniam, itaque a officia, aliquam dolores repudiandae enim fugit, similique sunt voluptate quaerat perferendis. Quasi esse minima itaque.</p>
+        </div>
+
+        <div class="Beef box">
+            <div class="title">
+                <p>Beef</p>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt dolore mollitia inventore veniam, itaque a officia, aliquam dolores repudiandae enim fugit, similique sunt voluptate quaerat perferendis. Quasi esse minima itaque.</p>
+        </div>
+
+        <div class="Sushi box">
+            <div class="title">
+                <p>Suchi</p>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt dolore mollitia inventore veniam, itaque a officia, aliquam dolores repudiandae enim fugit, similique sunt voluptate quaerat perferendis. Quasi esse minima itaque.</p>
+        </div>
+
+    </div>
 </body>
 </html>
